# tartufo-action

./: .pre-commit-config.yaml  .pre-commit-config.yml  CHANGELOG.md  Dockerfile  LICENSE  README.md  action.yaml  action.yml  entrypoint.py  entrypoint.sh  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: release.yml
docs/: CONTRIBUTING.md
